# imj

./: .gitignore  CMakeLists.txt  README.md
example/: main.c
include/: bmp.h  core.h  gif.h  imj.h  jpeg.h  logging.h  png.h  pnm.h  qoi.h  sample.h  utils.h  webp.h
src/: bmp.c  core.c  gif.c  imj.c  jpeg.c  png.c  pnm.c  qoi.c  sample.c  utils.c  webp.c
test/: test.py  test2.py
